--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "libft.h": "c",
         "push_swap.h": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "stdbool.h": "c"
     }
 }
